# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
gendiff/: __init__.py  creat_diff.py  generate_diff.py  pars.py
gendiff/formaters/: plain.py  stylish.py  to_json.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_gendiff.py  test_generate_diff.py  test_json.py  test_parser.py  test_plain.py  test_stylish.py
tests/fixtures/: conftest.py  json_result.json
